--- a/templates/views/apikey.hbs
+++ b/templates/views/apikey.hbs
@@ -63,7 +63,7 @@
             {{/if}}
             <h1 id="apititle">Create your api key</h1>
             <br>
-            <p>Please read the official <a href="http://localhost:3000/api/doc">documentation </a>if you need any help,</p>
+            <p>Please read the official <a href="https://linktraffic.herokuapp.com/api/doc">documentation </a>if you need any help,</p>
             <form action="/api/key" method="POST">
                 <input name="name" type="text" placeholder="Name" required>
                 <input name="email" type="email" placeholder="E-mail" required>
