--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -15,7 +15,7 @@
     <script>
     $(document).ready(function(){
         var image={};
-        fetch('http://localhost:3000/get-captcha')
+        fetch('https://linktraffic.herokuapp.com/get-captcha')
         .then(response => response.json())
         .then(data => { 
             var imgobj = document.getElementById("captcha-image")
