--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://localhost:3000" class="navbar-brand">Link Traffic</a>
+            <a href="http:/linktraffic.me" class="navbar-brand">Link Traffic</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -16,31 +16,31 @@
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         {{#each usedCodes }}
-                        <li><a href="https://localhost:3000/linkresult/{{this.code}}?pin={{this.pin}}">{{this.code}}</a></li>
+                        <li><a href="http:/linktraffic.me/linkresult/{{this.code}}?pin={{this.pin}}">{{this.code}}</a></li>
                         {{/each}}
                     </ul>
                 </li>
                 {{/if}}
                 <li>
-                    <a href="https://localhost:3000/terms">Terms of Service</a>
+                    <a href="http:/linktraffic.me/terms">Terms of Service</a>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">API
                         Service
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="https://localhost:3000/api/key">Create API
+                        <li><a href="http:/linktraffic.me/api/key">Create API
                                 key</a></li>
-                        <li><a href="https://localhost:3000/api/doc">Documentation</a></li>
+                        <li><a href="http:/linktraffic.me/api/doc">Documentation</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">About us
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="https://localhost:3000/privacy">Privacy Policy</a></li>
+                        <li><a href="http:/linktraffic.me/privacy">Privacy Policy</a></li>
                         <li>
-                            <a href="https://localhost:3000/contact">Contact Us</a>
+                            <a href="http:/linktraffic.me/contact">Contact Us</a>
                         </li>
                     </ul>
                 </li>
